--- a/css/components/common.css
+++ b/css/components/common.css
@@ -4,7 +4,7 @@ h2 {
   font-size: 42px;
   color: #333d4b;
   font-weight: 700;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
 h2 span {
   color: var(--main-color);
@@ -13,12 +13,27 @@ h2 span {
   margin-left: 20px;
 }
 
+h4 {
+  font-size: 24px;
+  font-weight: 600;
+  color: #333d4b;
+  margin-bottom: 24px;
+}
+
 p {
   font-size: 18px;
   color: #6b7684;
   font-weight: 500;
+  word-break: keep-all;
+  margin-bottom: 20px;
 }
 section {
+  width: 100vw;
+  padding: 140px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+section .wrap {
   width: 1100px;
-  margin: 140px;
 }
