--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 }
 body {
   line-height: 150%;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
